--- a/XFolding/XFolding.csproj
+++ b/XFolding/XFolding.csproj
@@ -43,9 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Direction.cs" />
     <Compile Include="Ext.cs" />
+    <Compile Include="Folding.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
