--- a/XFolding/XFolding.csproj
+++ b/XFolding/XFolding.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Direction.cs" />
     <Compile Include="Ext.cs" />
     <Compile Include="Folding.cs" />
+    <Compile Include="Population.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PType.cs" />
