--- a/XFolding/XGA.csproj
+++ b/XFolding/XGA.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Folding\FoldType.cs" />
     <Compile Include="Helper\RandomHelper.cs" />
+    <Compile Include="SilentStatistics\SilentWorkingSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
